--- a/client/src/assets/scss/helpers/_mixins.scss
+++ b/client/src/assets/scss/helpers/_mixins.scss
@@ -1,3 +1,31 @@
+/*
+* Fonts
+*/
+@mixin fontSize($sizeValue: 1.6) {
+  font-size: ($sizeValue * 1) + px;
+  font-size: ($sizeValue / 10) + rem;
+}
+
+/*
+* size elements
+*/
+@mixin size($width, $height: $width) {
+  width: $width;
+  height: $height;
+}
+
+/*
+* Placeholder
+*/
+@mixin input-placeholder {
+  &::-webkit-input-placeholder { @content; }
+  &::-moz-placeholder { @content; }
+  &:-moz-placeholder { @content; }
+  &:-ms-input-placeholder { @content; }
+}
+/*
+* Media queries
+ */
 @mixin media($media){
   // Code pour les grand écrans d'ordinateurs
   @if $media == "large-desktop"{
